Implementando CRUD de database

--- a/Alunos/Views/Cliente/PageConsultCliente.cshtml
+++ b/Alunos/Views/Cliente/PageConsultCliente.cshtml
@@ -11,7 +11,7 @@
         <li class="list-group-item">Sobrenome: @Model.SobrenomeCliente</li>
         <li class="list-group-item">E-mail: @Model.Email</li>
         <li class="list-group-item">Data Nascimento: @Model.DataNascimento</li>
-        <li class="list-group-item">Representante: @Model.RepresentanteId</li>
+        <li class="list-group-item">Representante: @Model.Representante.NomeRepresentante</li>
     </ul>
 
     <br />
