--- a/Alunos/Views/Cliente/PageUpdateCliente.cshtml
+++ b/Alunos/Views/Cliente/PageUpdateCliente.cshtml
@@ -31,7 +31,7 @@
                 </div>
                 <div class="mb-3">
                     <label asp-for="DataNascimento" class="form-label"></label>
-                    <input asp-for="DataNascimento" type="datetime-local" value="@Model.DataNascimento" class="form-control"/>
+                    <input asp-for="DataNascimento" type="datetime-local" value="@Model.DataNascimento.ToString("yyyy-MM-ddTHH:mm")" class="form-control" />
                     <span asp-validation-for="DataNascimento"></span>
                 </div>
                 <div class="mb-3">
