Adicionando persistenica de dados

--- a/Alunos/Views/Cliente/Index.cshtml
+++ b/Alunos/Views/Cliente/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ClienteModel> //Indica que estamos recebendo uma lista da controller por essa View
+﻿@model List<ClienteModel>
 @{
     <div style="display: flex; gap: 12px; align-items: center">
         <h1>Clientes</h1>
